--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
     <nav>
         <a href="index.html">Home</a>
         <a href="#">Notícias</a>
-        <a href="#">Curiosidades</a>
-        <a href="#">Fale Connosco</a>
+        <a href="#">Contacto</a>
     </nav>
 
     <!--        MAIN        -->
